# vault

./: .gitignore  Cargo.toml  flake.nix  justfile  stylance.nix  vault.nix
src/: account.rs  app.css  app.rs  app_error_view.rs  db.rs  file_store.rs  files.rs  lib.rs  main.rs  serve_file.rs  server.rs  style_utils.rs  utils.rs  vault.rs
src/account/: auth.rs
src/app/: file_area.rs  file_area.scss  folders.css  folders.rs  input.css  input.rs  local_image.rs  login.css  login.rs  notify.css  notify.rs  sidebar.css  sidebar.rs
src/app/file_area/: file.rs
src/app/folders/: folder.rs  folder.scss
src/file_store/: folder_state.rs
src/files/: new_file_transaction.rs
src/server/: serve_file.rs
src/vault/: cipher_secret.rs  db_access.rs  mock_secure.rs  secure.rs  types.rs
