[package]
name = "vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6", features = ["nightly"] }
leptos_meta = { version = "0.6", features = ["nightly"] }
leptos_router = { version = "0.6", features = ["nightly"] }
thiserror = "1"
http = "1"
wasm-bindgen = "=0.2.89"
serde = "1"
stylance = { version = "0.3.0", features = ["nightly"] }

leptos_axum = { version = "0.6", optional = true }
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs"], optional = true }
tracing = { version = "0.1", optional = true }

console_error_panic_hook = { version = "0.1", optional = true }

[features]
ssr = [
	"dep:tokio",
	"dep:tower",
	"dep:tower-http",
	"dep:axum",
	"dep:leptos_axum",
	"dep:tracing",
	"leptos/ssr",
	"leptos_meta/ssr",
	"leptos_router/ssr",
]
hydrate = [
	"dep:console_error_panic_hook",
	"leptos/hydrate",
	"leptos_meta/hydrate",
	"leptos_router/hydrate",
]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
output-name = "vault"
site-root = "target/site"
site-pkg-dir = "pkg"
assets-dir = "assets"
style-file = "target/stylance.css"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = ["ssr"]
bin-default-features = true
lib-features = ["hydrate"]
lib-default-features = true
lib-profile-release = "wasm-release"

[package.metadata.stylance]
output_file = "target/stylance.css"
extensions = [".css"]
