[package]
name = "vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6", features = ["nightly"] }
leptos_meta = { version = "0.6", features = ["nightly"] }
leptos_router = { version = "0.6", features = ["nightly"] }
web-sys = { version = "0.3", features = ["DragEvent", "DataTransfer", "FileList", "File", "Blob", "HtmlInputElement"] }
thiserror = "1"
http = "1"
wasm-bindgen = "=0.2.92"
wasm-bindgen-futures = "0.4"
futures = "0.3"
serde = "1"
serde-big-array = "0.5"
stylance = { version = "0.5", features = ["nightly"] }
getrandom = { version = "0.2", features = ["std", "js"] }
chacha20poly1305 = { version = "0.10", features = ["std"] }
gloo-file = { version = "0.3", features = ["futures"] }
cache_bust = { version = "0.2", default-features = false, features = ["macro"] }
# only needed to enable serde feature
generic-array = { version = "0.14", features = ["serde"] }

leptos_axum = { version = "0.6", optional = true }
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs"], optional = true }
tracing = { version = "0.1", optional = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }

console_error_panic_hook = { version = "0.1", optional = true }
sha2 = { version = "0.10", optional = true }
argon2 = { version = "0.5", optional = true }

[features]
ssr = [
	"dep:tokio",
	"dep:tower",
	"dep:tower-http",
	"dep:axum",
	"dep:leptos_axum",
	"dep:tracing",
	"dep:rusqlite",
	"leptos/ssr",
	"leptos_meta/ssr",
	"leptos_router/ssr",
]
hydrate = [
	"dep:console_error_panic_hook",
	"dep:sha2",
	"dep:argon2",
	"leptos/hydrate",
	"leptos_meta/hydrate",
	"leptos_router/hydrate",
]

[profile.dev.package.argon2]
opt-level = 3

[profile.dev.package.chacha20poly1305]
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
output-name = "vault"
site-root = "target/site"
site-pkg-dir = "pkg"
assets-dir = "assets"
style-file = "target/stylance.scss"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = ["ssr"]
bin-default-features = true
lib-features = ["hydrate"]
lib-default-features = true

[package.metadata.stylance]
output_file = "target/stylance.scss"
extensions = [".css", ".scss"]
